<resources>
    <string name="app_name">FAHControl</string>


    <string name="delete">Delete</string>
    <string name="add_connection">Add Server</string>

    <string name="ip_address">IP Address:*</string>
    <string name="ip_address_hint">192.168.1.69</string>
    <string name="ip_address_pattern">That doesn\'t look like an IP Address</string>
    <string name="port">Port: </string>
    <string name="port_hint">36330</string>
    <string name="nickname">Nickname:*</string>
    <string name="nickname_hint">Basement Arch</string>
    <string name="password">Password:</string>
    <string name="password_warn">Passwords will be transmitted in plaintext.\nIt is strongly recommended that you don\'t use your bank password for folding @ home.\nPress submit again to acknowledge.</string>
    <string name="password_hint">iamthebest123</string>
    <string name="delete_warn">Press delete again to confirm</string>
    <string name="req_fields">* Required Fields</string>
    <string name="fold">Fold</string>
    <string name="pause">Pause</string>
    <string name="finish">Finish</string>


</resources>
